--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
@@ -105,7 +105,7 @@
                         class: "col s12 areaDados",
                         html: [data]
                     }));
-                }).error(erro);
+                }).fail(erro);
             } else {
                 $("#ordinal").show();
 
@@ -117,7 +117,7 @@
                         class: "col s12",
                         html: [data]
                     }));
-                }).error(erro);
+                }).fail(erro);
             }
         });
 
