--- a/SoftwareEstatistica.Web/Views/Quantitativas/Rol.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/Rol.cshtml
@@ -1,7 +1,7 @@
 @{ Layout = null; }
 
 <div class="rol">
-    <h5 class="left">Dados ordenados</h5>
+    <h5 class="center">Dados ordenados</h5>
     <div class="scroll"><table class="highlight" id="dadosOrdenados" style="margin-bottom: 30px"></table></div>
 </div>
 
