Adicionando distribuição uniforme

--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -45,21 +45,6 @@
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
             <li>
-                <a class="collapsible-header white-text">Técnicas de Amostragem<i class="material-icons right white-text">zoom_in</i></a>
-                <div class="collapsible-body blue-grey darken-1">
-                    <ul>
-                        <li><a href="#!" class="white-text">Aleatória</a></li>
-                        <li><a href="#!" class="white-text">Uniforme</a></li>
-                        <li><a href="#!" class="white-text">Proporcional</a></li>
-                        <li><a href="#!" class="white-text">Sistemática</a></li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </li>
-    <li class="no-padding">
-        <ul class="collapsible collapsible-accordion">
-            <li>
                 <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
                 <div class="collapsible-body blue-grey darken-1">
                     <ul>
@@ -70,8 +55,9 @@
             </li>
         </ul>
     </li>
-    <li><a href="#!" id="distribuicaoBinomial" class="white-text">Distribuição Binomial</a></li>
     <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
+    <li><a href="#!" id="distribuicaoBinomial" class="white-text">Distribuição Binomial</a></li>
+    <li><a href="#!" id="distribuicaoUniforme" class="white-text">Distribuição Uniforme</a></li>
 </ul>
 <div class="botoes-navegacao">
     <a href="#" data-target="slide-out" class="sidenav-trigger menu"><i class="material-icons">menu</i></a>
