Corrigindo nome de variável(coeficiente de variação)

--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/DistribuicaoUniforme.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/DistribuicaoUniforme.cshtml
@@ -119,7 +119,7 @@
                     html: [dados.zonaNormalidade.ate]
                 }),
                 $("<td>", {
-                    html: [dados.zonaNormalidade.porcentagem + "%"]
+                    html: [dados.zonaNormalidade.cv + "%"]
                 }),
                 $("<td>", {
                     html: [dados.probabilidade]
