--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/DistribuicaoUniforme.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/DistribuicaoUniforme.cshtml
@@ -76,6 +76,9 @@
 </div>
 
 <script>
+
+    $("#slide-out").css("transform", "translateX(-105%)");
+
     $("#selectIntervalo").change(function () {
         if ($(this).val() != "E") {
             $("#campoIntervalo").fadeOut("fast");
