--- a/SoftwareEstatistica.Web/Views/Quantitativas/MediaModaMediana.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/MediaModaMediana.cshtml
@@ -1,5 +1,5 @@
 <div class="mediamodamediana">
-    <h5 class="left">Dados</h5>
+    <h5>Dados</h5>
     <div class="scroll">
         <table class="tabela highlight" id="dadosMediaModaMediana">
             <thead>
