--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
     <a href="#" data-target="slide-out" class="sidenav-trigger menu"><i class="material-icons">menu</i></a>
     <a href="#" id="retornar" class="retorno" style="display:none;"><i class="material-icons small">keyboard_backspace</i></a>
 </div>
-<div id="corpoSite" class="height">
+<div id="corpoSite">
     <div class="center">
         <i class="large material-icons" style="color: #37474f; font-size: 40rem;">trending_up</i>
     </div>
