--- a/SoftwareEstatistica.Web/wwwroot/css/site.css
+++ b/SoftwareEstatistica.Web/wwwroot/css/site.css
@@ -27,7 +27,7 @@
 }
 
 table:not(.tabela) tr td, table:not(.tabela) tr th:not(.tabela){
-    padding: 10px 10px !important;
+    padding: 10px 20px !important;
     text-align: center !important;
     font-size: 30px;
     border: 1px solid black;
@@ -50,10 +50,11 @@ table:not(.tabela) tr td, table:not(.tabela) tr th:not(.tabela){
 	z-index: 1004;
 }
 
-.areaDados{
-    border: 3px solid #37474f;
+.areaDados {
+    border: 1px solid #37474f;
     border-radius: 6px;
-    padding:12px 0;
+    padding: 12px 0;
+    box-shadow: 0 10px 6px -6px #9e9e9e;
 }
 
 .chips .input {
@@ -91,10 +92,6 @@ table:not(.tabela) tr td, table:not(.tabela) tr th:not(.tabela){
     font-size: 30px;
 }
 
-.rol h5{
-  width: 172px;   
-}
-
 .botoes-navegacao{
     display: flex;
     justify-content: flex-start;
@@ -125,8 +122,7 @@ table:not(.tabela) tr td, table:not(.tabela) tr th:not(.tabela){
 }
 
 #roladicionado .rol .scroll{
-    height: 463px;
-    overflow-y: scroll;
+    overflow-x: scroll;
     padding-right: 15px;
 }
 
@@ -149,12 +145,8 @@ table:not(.tabela) tr td, table:not(.tabela) tr th:not(.tabela){
     padding-right: 30px;
 }
 
-.qualitativa #roladicionado .rol .scroll {
-    height: 461px;
-}
-
 .grafico{
-    margin: 0 10px;
+    margin:20px 0;
 }
 
 #ordinal{
@@ -169,4 +161,38 @@ table:not(.tabela) tr td, table:not(.tabela) tr th:not(.tabela){
     #corpoSite, #divLoad {
       padding-left: 0;
     }
+}
+
+.leyer-sobreposto{
+    position:fixed;
+    display:none;
+    justify-content:center;
+    align-items:center;
+    width:100%;
+    height:100%;
+    top:0;
+    z-index:998;
+}
+
+    .leyer-sobreposto .fundo-leyer {
+        position: absolute;
+        background-color: black;
+        opacity: 0.5;
+        width: 100%;
+        height: 100%;
+    }
+    .leyer-sobreposto .container {
+        z-index: 999;
+        background-color: white;
+        border-radius: 6px;
+    }
+
+    .btn-grafico {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        display: none;
+    }
+h5{
+    text-align:center;
 }
