--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/DistribuicaoBinomial.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/DistribuicaoBinomial.cshtml
@@ -9,7 +9,7 @@
                     </div>
                     <div class="input-field col s6">
                         <input id="sucesso" type="text">
-                        <label for="sucesso">Sucesso(p):</label>
+                        <label for="sucesso">Sucesso(p%):</label>
                     </div>
                 </div>
                 <div class="row">
@@ -52,6 +52,7 @@
 
 <script>
     $("#slide-out").css("transform", "translateX(-105%)");
+    $("body").css("overflow", "");
 
     $("#opcoesDistribuicaoBinomial").change(function () {
         if ($(this).val() == 4)
@@ -63,7 +64,7 @@
     $("#btnEnviaDadosDistribuicaoBinomial").click(function () {
         $("#resultadoDistribuicaoBinomial").html("").append($("<p>",
             {
-                html: ["A porcentagem é: " + distribuicaoBinomial($("#quantidaden").val(), $("#sucesso").val(), $("#quantidadex").val(), $("#opcaoSucessoErro").val(), $("#opcoesDistribuicaoBinomial").val())]
+                html: ["A porcentagem é: " + distribuicaoBinomial($("#quantidaden").val(), $("#sucesso").val(), $("#quantidadex").val(), $("#opcaoSucessoErro").val(), $("#opcoesDistribuicaoBinomial").val()) + "%"]
             }));
     });
 </script>
